fix icon alignment

--- a/src/app/sidebar/aichat.less
+++ b/src/app/sidebar/aichat.less
@@ -45,13 +45,14 @@
         .chat-msg {
             padding: calc(var(--termpad) * 2);
             display: flex;
-            align-items: center;
+            align-items: flex-start;
 
             .chat-msg-header {
                 display: flex;
                 margin-bottom: 2px;
 
                 i {
+                    margin-top: 2px;
                     margin-right: 0.5em;
                 }
             }
